# xerxes-protocol-cpp

./: .gitignore  CMakeLists.txt  README.md  xerxes-protocol-config.cmake
cpp/include/: msgid.h
cpp/src/: protocol.c
include/: devids.h  protocol.h
src/: DeviceIds.h  Leaf.cpp  Leaf.hpp  Master.cpp  Master.hpp  MemoryMap.h  Message.cpp  Message.hpp  MessageId.h  Packet.cpp  Packet.hpp  Protocol.cpp  Protocol.hpp  Version.h
src/esp32/: EspUart.hpp
xerxes-protocol/: DeviceIds.h  Protocol.hpp
